[package]
name = "xlayer-engine-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Internal
xlayer-monitor.workspace = true

# Reth dependencies
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-optimism-node.workspace = true
reth-optimism-rpc.workspace = true
reth-rpc-api.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# OP Stack dependencies
op-alloy-rpc-types-engine.workspace = true

# Misc dependencies
async-trait.workspace = true
clap.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true

[lints]
workspace = true
