[package]
name = "xlayer-flashblocks-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
op-rbuilder.workspace = true
reth-node-api.workspace = true
reth-primitives-traits.workspace = true
reth-tracing.workspace = true
reth-optimism-flashblocks = { git = "https://github.com/okx/reth", branch = "upstream/dev" }

revm-context-interface.workspace = true
revm-database.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-eips.workspace = true

tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
rollup-boost.workspace = true

[lints]
workspace = true
