[package]
name = "xlayer-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Reth dependencies
reth-chain-state.workspace = true
reth-node-api.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# OP Stack dependencies
op-alloy-rpc-types-engine.workspace = true

# Misc dependencies
clap.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
serde_json.workspace = true
tracing.workspace = true
tower.workspace = true

[lints]
workspace = true
